// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-calendar #render should render component as expected (1) 1`] = `
<gux-calendar>
  <mock:shadow-root>
    <div class="gux-calendar">
      <div class="gux-header">
        <button aria-hidden="true" class="gux-left" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
        <div class="gux-month-list">
          <label>
            April 2022
          </label>
        </div>
        <button aria-hidden="true" class="gux-right" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </div>
      <div class="gux-content">
        <table>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648252800000" tabindex="-1">
              26
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648339200000" tabindex="-1">
              27
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648422000000" tabindex="-1">
              28
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648508400000" tabindex="-1">
              29
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648594800000" tabindex="-1">
              30
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648681200000" tabindex="-1">
              31
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648767600000" tabindex="-1">
              1
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1648854000000" tabindex="-1">
              2
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648940400000" tabindex="-1">
              3
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649026800000" tabindex="-1">
              4
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649113200000" tabindex="-1">
              5
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649199600000" tabindex="-1">
              6
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649286000000" tabindex="-1">
              7
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649372400000" tabindex="-1">
              8
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1649458800000" tabindex="-1">
              9
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649545200000" tabindex="-1">
              10
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-selected" data-date="1649631600000" tabindex="0">
              11
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649718000000" tabindex="-1">
              12
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649804400000" tabindex="-1">
              13
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649890800000" tabindex="-1">
              14
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649977200000" tabindex="-1">
              15
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1650063600000" tabindex="-1">
              16
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650150000000" tabindex="-1">
              17
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650236400000" tabindex="-1">
              18
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650322800000" tabindex="-1">
              19
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650409200000" tabindex="-1">
              20
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650495600000" tabindex="-1">
              21
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650582000000" tabindex="-1">
              22
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1650668400000" tabindex="-1">
              23
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650754800000" tabindex="-1">
              24
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650841200000" tabindex="-1">
              25
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650927600000" tabindex="-1">
              26
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1651014000000" tabindex="-1">
              27
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1651100400000" tabindex="-1">
              28
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1651186800000" tabindex="-1">
              29
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1651273200000" tabindex="-1">
              30
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1651359600000" tabindex="-1">
              1
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1651446000000" tabindex="-1">
              2
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1651532400000" tabindex="-1">
              3
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1651618800000" tabindex="-1">
              4
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1651705200000" tabindex="-1">
              5
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1651791600000" tabindex="-1">
              6
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
        </table>
      </div>
    </div>
  </mock:shadow-root>
</gux-calendar>
`;

exports[`gux-calendar #render should render component as expected (2) 1`] = `
<gux-calendar value="2018-02-13">
  <mock:shadow-root>
    <div class="gux-calendar">
      <div class="gux-header">
        <button aria-hidden="true" class="gux-left" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
        <div class="gux-month-list">
          <label>
            February 2018
          </label>
        </div>
        <button aria-hidden="true" class="gux-right" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </div>
      <div class="gux-content">
        <table>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1517097600000" tabindex="-1">
              28
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1517184000000" tabindex="-1">
              29
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1517270400000" tabindex="-1">
              30
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1517356800000" tabindex="-1">
              31
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517443200000" tabindex="-1">
              1
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517529600000" tabindex="-1">
              2
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517616000000" tabindex="-1">
              3
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1517702400000" tabindex="-1">
              4
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517788800000" tabindex="-1">
              5
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517875200000" tabindex="-1">
              6
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1517961600000" tabindex="-1">
              7
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518048000000" tabindex="-1">
              8
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518134400000" tabindex="-1">
              9
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518220800000" tabindex="-1">
              10
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1518307200000" tabindex="-1">
              11
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518393600000" tabindex="-1">
              12
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-selected" data-date="1518480000000" tabindex="0">
              13
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518566400000" tabindex="-1">
              14
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518652800000" tabindex="-1">
              15
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518739200000" tabindex="-1">
              16
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518825600000" tabindex="-1">
              17
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1518912000000" tabindex="-1">
              18
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1518998400000" tabindex="-1">
              19
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519084800000" tabindex="-1">
              20
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519171200000" tabindex="-1">
              21
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519257600000" tabindex="-1">
              22
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519344000000" tabindex="-1">
              23
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519430400000" tabindex="-1">
              24
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1519516800000" tabindex="-1">
              25
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519603200000" tabindex="-1">
              26
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519689600000" tabindex="-1">
              27
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" data-date="1519776000000" tabindex="-1">
              28
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1519862400000" tabindex="-1">
              1
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1519948800000" tabindex="-1">
              2
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520035200000" tabindex="-1">
              3
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520121600000" tabindex="-1">
              4
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520208000000" tabindex="-1">
              5
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520294400000" tabindex="-1">
              6
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520380800000" tabindex="-1">
              7
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520467200000" tabindex="-1">
              8
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520553600000" tabindex="-1">
              9
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1520640000000" tabindex="-1">
              10
              <span class="gux-sr-only">
                February 2018
              </span>
            </td>
          </tr>
        </table>
      </div>
    </div>
  </mock:shadow-root>
</gux-calendar>
`;

exports[`gux-calendar #render should render component as expected (3) 1`] = `
<gux-calendar mode="single" number-of-months="2">
  <mock:shadow-root>
    <div class="gux-calendar">
      <div class="gux-header">
        <button aria-hidden="true" class="gux-left" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
        <div class="gux-month-list">
          <label>
            April 2022
          </label>
          <label>
            May 2022
          </label>
        </div>
        <button aria-hidden="true" class="gux-right" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </div>
      <div class="gux-content">
        <table>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648252800000" tabindex="-1">
              26
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648339200000" tabindex="-1">
              27
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648422000000" tabindex="-1">
              28
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648508400000" tabindex="-1">
              29
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648594800000" tabindex="-1">
              30
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1648681200000" tabindex="-1">
              31
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648767600000" tabindex="-1">
              1
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1648854000000" tabindex="-1">
              2
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648940400000" tabindex="-1">
              3
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649026800000" tabindex="-1">
              4
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649113200000" tabindex="-1">
              5
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649199600000" tabindex="-1">
              6
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649286000000" tabindex="-1">
              7
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649372400000" tabindex="-1">
              8
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1649458800000" tabindex="-1">
              9
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649545200000" tabindex="-1">
              10
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-selected" data-date="1649631600000" tabindex="0">
              11
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649718000000" tabindex="-1">
              12
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649804400000" tabindex="-1">
              13
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649890800000" tabindex="-1">
              14
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649977200000" tabindex="-1">
              15
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1650063600000" tabindex="-1">
              16
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650150000000" tabindex="-1">
              17
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650236400000" tabindex="-1">
              18
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650322800000" tabindex="-1">
              19
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650409200000" tabindex="-1">
              20
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650495600000" tabindex="-1">
              21
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650582000000" tabindex="-1">
              22
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1650668400000" tabindex="-1">
              23
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650754800000" tabindex="-1">
              24
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650841200000" tabindex="-1">
              25
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650927600000" tabindex="-1">
              26
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1651014000000" tabindex="-1">
              27
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1651100400000" tabindex="-1">
              28
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1651186800000" tabindex="-1">
              29
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1651273200000" tabindex="-1">
              30
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1651359600000" tabindex="-1">
              1
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1651446000000" tabindex="-1">
              2
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1651532400000" tabindex="-1">
              3
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1651618800000" tabindex="-1">
              4
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1651705200000" tabindex="-1">
              5
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1651791600000" tabindex="-1">
              6
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
        </table>
        <table>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1651359600000" tabindex="-1">
              1
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1651446000000" tabindex="-1">
              2
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1651532400000" tabindex="-1">
              3
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1651618800000" tabindex="-1">
              4
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1651705200000" tabindex="-1">
              5
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1651791600000" tabindex="-1">
              6
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1651878000000" tabindex="-1">
              7
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1651964400000" tabindex="-1">
              8
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1652050800000" tabindex="-1">
              9
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1652137200000" tabindex="-1">
              10
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1652223600000" tabindex="-1">
              11
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1652310000000" tabindex="-1">
              12
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1652396400000" tabindex="-1">
              13
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1652482800000" tabindex="-1">
              14
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1652569200000" tabindex="-1">
              15
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1652655600000" tabindex="-1">
              16
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1652742000000" tabindex="-1">
              17
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1652828400000" tabindex="-1">
              18
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1652914800000" tabindex="-1">
              19
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1653001200000" tabindex="-1">
              20
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1653087600000" tabindex="-1">
              21
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1653174000000" tabindex="-1">
              22
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1653260400000" tabindex="-1">
              23
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1653346800000" tabindex="-1">
              24
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1653433200000" tabindex="-1">
              25
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1653519600000" tabindex="-1">
              26
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1653606000000" tabindex="-1">
              27
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1653692400000" tabindex="-1">
              28
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1653778800000" tabindex="-1">
              29
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1653865200000" tabindex="-1">
              30
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1653951600000" tabindex="-1">
              31
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1654038000000" tabindex="-1">
              1
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1654124400000" tabindex="-1">
              2
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1654210800000" tabindex="-1">
              3
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1654297200000" tabindex="-1">
              4
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1654383600000" tabindex="-1">
              5
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1654470000000" tabindex="-1">
              6
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1654556400000" tabindex="-1">
              7
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1654642800000" tabindex="-1">
              8
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1654729200000" tabindex="-1">
              9
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1654815600000" tabindex="-1">
              10
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-not-in-month" data-date="1654902000000" tabindex="-1">
              11
              <span class="gux-sr-only">
                May 2022
              </span>
            </td>
          </tr>
        </table>
      </div>
    </div>
  </mock:shadow-root>
</gux-calendar>
`;

exports[`gux-calendar #render should render component as expected (4) 1`] = `
<gux-calendar mode="range">
  <mock:shadow-root>
    <div class="gux-calendar">
      <div class="gux-header">
        <button aria-hidden="true" class="gux-left" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
        <div class="gux-month-list">
          <label>
            April 2022
          </label>
        </div>
        <button aria-hidden="true" class="gux-right" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </div>
      <div class="gux-content">
        <table>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
          <tr>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1648252800000" tabindex="-1">
              26
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1648339200000" tabindex="-1">
              27
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1648422000000" tabindex="-1">
              28
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1648508400000" tabindex="-1">
              29
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1648594800000" tabindex="-1">
              30
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1648681200000" tabindex="-1">
              31
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648767600000" tabindex="-1">
              1
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1648854000000" tabindex="-1">
              2
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1648940400000" tabindex="-1">
              3
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649026800000" tabindex="-1">
              4
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649113200000" tabindex="-1">
              5
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649199600000" tabindex="-1">
              6
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649286000000" tabindex="-1">
              7
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649372400000" tabindex="-1">
              8
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1649458800000" tabindex="-1">
              9
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649545200000" tabindex="-1">
              10
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-hovered gux-selected gux-start-date" data-date="1649631600000" tabindex="0">
              11
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649718000000" tabindex="-1">
              12
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649804400000" tabindex="-1">
              13
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649890800000" tabindex="-1">
              14
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1649977200000" tabindex="-1">
              15
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1650063600000" tabindex="-1">
              16
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650150000000" tabindex="-1">
              17
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650236400000" tabindex="-1">
              18
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650322800000" tabindex="-1">
              19
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650409200000" tabindex="-1">
              20
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650495600000" tabindex="-1">
              21
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650582000000" tabindex="-1">
              22
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1650668400000" tabindex="-1">
              23
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650754800000" tabindex="-1">
              24
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650841200000" tabindex="-1">
              25
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1650927600000" tabindex="-1">
              26
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1651014000000" tabindex="-1">
              27
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1651100400000" tabindex="-1">
              28
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" data-date="1651186800000" tabindex="-1">
              29
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" data-date="1651273200000" tabindex="-1">
              30
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1651359600000" tabindex="-1">
              1
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1651446000000" tabindex="-1">
              2
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1651532400000" tabindex="-1">
              3
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1651618800000" tabindex="-1">
              4
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1651705200000" tabindex="-1">
              5
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1651791600000" tabindex="-1">
              6
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
        </table>
      </div>
    </div>
  </mock:shadow-root>
</gux-calendar>
`;

exports[`gux-calendar #render should render component as expected (5) 1`] = `
<gux-calendar max-date="2019-07-10" min-date="2019-05-02" mode="range">
  <mock:shadow-root>
    <div class="gux-calendar">
      <div class="gux-header">
        <button aria-hidden="true" class="gux-left" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
        <div class="gux-month-list">
          <label>
            April 2022
          </label>
        </div>
        <button aria-hidden="true" class="gux-right" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </div>
      <div class="gux-content">
        <table>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
          <tr>
            <td aria-hidden="true" class="gux-disabled gux-hidden gux-not-in-month" data-date="1648252800000" tabindex="-1">
              26
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-disabled gux-hidden gux-not-in-month" data-date="1648339200000" tabindex="-1">
              27
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-disabled gux-hidden gux-not-in-month" data-date="1648422000000" tabindex="-1">
              28
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-disabled gux-hidden gux-not-in-month" data-date="1648508400000" tabindex="-1">
              29
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-disabled gux-hidden gux-not-in-month" data-date="1648594800000" tabindex="-1">
              30
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-disabled gux-hidden gux-not-in-month" data-date="1648681200000" tabindex="-1">
              31
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1648767600000" tabindex="-1">
              1
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-disabled" data-date="1648854000000" tabindex="-1">
              2
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1648940400000" tabindex="-1">
              3
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1649026800000" tabindex="-1">
              4
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1649113200000" tabindex="-1">
              5
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1649199600000" tabindex="-1">
              6
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1649286000000" tabindex="-1">
              7
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1649372400000" tabindex="-1">
              8
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-disabled" data-date="1649458800000" tabindex="-1">
              9
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1649545200000" tabindex="-1">
              10
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled gux-hovered gux-selected gux-start-date" data-date="1649631600000" tabindex="0">
              11
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1649718000000" tabindex="-1">
              12
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1649804400000" tabindex="-1">
              13
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1649890800000" tabindex="-1">
              14
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1649977200000" tabindex="-1">
              15
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-disabled" data-date="1650063600000" tabindex="-1">
              16
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1650150000000" tabindex="-1">
              17
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1650236400000" tabindex="-1">
              18
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1650322800000" tabindex="-1">
              19
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1650409200000" tabindex="-1">
              20
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1650495600000" tabindex="-1">
              21
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1650582000000" tabindex="-1">
              22
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-disabled" data-date="1650668400000" tabindex="-1">
              23
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1650754800000" tabindex="-1">
              24
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1650841200000" tabindex="-1">
              25
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1650927600000" tabindex="-1">
              26
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1651014000000" tabindex="-1">
              27
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1651100400000" tabindex="-1">
              28
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="false" class="gux-disabled" data-date="1651186800000" tabindex="-1">
              29
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
          <tr>
            <td aria-hidden="false" class="gux-disabled" data-date="1651273200000" tabindex="-1">
              30
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-disabled gux-hidden gux-not-in-month" data-date="1651359600000" tabindex="-1">
              1
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-disabled gux-hidden gux-not-in-month" data-date="1651446000000" tabindex="-1">
              2
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-disabled gux-hidden gux-not-in-month" data-date="1651532400000" tabindex="-1">
              3
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-disabled gux-hidden gux-not-in-month" data-date="1651618800000" tabindex="-1">
              4
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-disabled gux-hidden gux-not-in-month" data-date="1651705200000" tabindex="-1">
              5
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
            <td aria-hidden="true" class="gux-disabled gux-hidden gux-not-in-month" data-date="1651791600000" tabindex="-1">
              6
              <span class="gux-sr-only">
                April 2022
              </span>
            </td>
          </tr>
        </table>
      </div>
    </div>
  </mock:shadow-root>
</gux-calendar>
`;
